--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.29.1", features = ["full"] }
+tarpc = "0.33.0"
+serde = "1.0.175"
+anyhow = "1.0.72"
+futures = "0.3.28"
