--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.29.1", features = ["full"] }
-tarpc = "0.33.0"
+tarpc = { version = "0.33.0", features = ["full"] }
+tokio-serde = { version = "0.6", features = ["json"] }
 serde = "1.0.175"
 anyhow = "1.0.72"
 futures = "0.3.28"
