feat: add wal related logic & provide script for default starting

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,12 @@
 clean:
 	rm mr-*-*.txt
+	rm *.nohup
 clean_all:
 	rm mr-*.txt
+	rm *.nohup
 	rm final.txt
 generate:
+	rm mr-*-*.txt
 	cat mr-* | sort > final.txt
 count:
 	@find . -name "*.rs" | xargs wc -l | tail -n 1
